--- a/templates/launchpad.json
+++ b/templates/launchpad.json
@@ -17,22 +17,5 @@
             }
         }
     },
-    "applications": {
-        "fs-form": {
-            "title": "Form UI",
-            "description": "Form UI",
-            "additionalInformation": "SAPUI5.Component=sap.ui.eventregistration.form",
-            "applicationType": "URL",
-            "url": "./form",
-            "navigationMode": "embedded"
-        },
-        "fe-lrop-v4": {
-            "title": "Admin UI",
-            "description": "Admin UI",
-            "additionalInformation": "SAPUI5.Component=sap.ui.eventregistration.admin",
-            "applicationType": "URL",
-            "url": "./admin",
-            "navigationMode": "embedded"
-        }
-    }
+    "applications": {}
 }
