--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "express": ">=4"
   },
   "devDependencies": {
-    "@sap/cds": "^5.7.5",
+    "@sap/cds": ">=5.7.5",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "express": "^4.17.2",
