--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cds-launchpad-plugin",
-  "version": "1.0.9",
+  "version": "2.0.0",
   "description": "Launchpad Plugin for demo / development / testing SAP CAP-based projects",
   "main": "dist/index.js",
   "types": "dist/index",
@@ -45,5 +45,11 @@
     "sqlite3": "^5.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
+  },
+  "cds" : {
+    "launchpad": {
+      "basePath": "/$launchpad",
+      "theme": "sap_horizon"
+    }
   }
 }
