--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
       "basePath": "/$launchpad",
       "theme": "sap_horizon"
     }
-  }
+  },
+  "workspaces": [
+    "test/cds-plugin-ui5/packages/*",
+    "./"
+  ]
 }
