--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "devold": "ts-node ./test/server.ts",
     "prepublish": "tsc",
     "watch": "tsc -w",
-    "test": "pnpm --filter http-test test"
+    "test": "pnpm --filter http-test test",
+    "prepare": "husky install && chmod ug+x .husky/*"
   },
   "repository": {
     "type": "git",
@@ -42,10 +43,13 @@
     "express": ">=4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "@sap/cds": ">=5.7.5",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "express": "^4.17.2",
+    "husky": "^9.0.0",
     "sqlite3": "^5.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
