chore: change test name

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  test-wdi5:
+  test:
     runs-on: ubuntu-latest
     if: "github.event.pull_request.title != 'chore: release main'"
     strategy:
